bindings/rust/src/ffi.rs


    // --- Modulation ---
    pub fn patina_modulation_default_params() -> PatinaModulationParams;
    pub fn patina_modulation_create() -> PatinaModulationEngine;
    pub fn patina_modulation_destroy(h: PatinaModulationEngine);
    pub fn patina_modulation_prepare(h: PatinaModulationEngine, spec: *const PatinaProcessSpec);
    pub fn patina_modulation_reset(h: PatinaModulationEngine);
    pub fn patina_modulation_process(
        h: PatinaModulationEngine,
        input: *const *const c_float,
        output: *const *mut c_float,
        num_channels: c_int,
        num_samples: c_int,
        params: *const PatinaModulationParams,
    );

    // --- Tape ---
    pub fn patina_tape_default_params() -> PatinaTapeParams;
    pub fn patina_tape_create() -> PatinaTapeEngine;
    pub fn patina_tape_destroy(h: PatinaTapeEngine);
    pub fn patina_tape_prepare(h: PatinaTapeEngine, spec: *const PatinaProcessSpec);
    pub fn patina_tape_reset(h: PatinaTapeEngine);
    pub fn patina_tape_process(
        h: PatinaTapeEngine,
        input: *const *const c_float,
        output: *const *mut c_float,
        num_channels: c_int,
        num_samples: c_int,
        params: *const PatinaTapeParams,
    );

    // --- Channel Strip ---
    pub fn patina_channel_strip_default_params() -> PatinaChannelStripParams;
    pub fn patina_channel_strip_create() -> PatinaChannelStrip;
    pub fn patina_channel_strip_destroy(h: PatinaChannelStrip);
    pub fn patina_channel_strip_prepare(h: PatinaChannelStrip, spec: *const PatinaProcessSpec);
    pub fn patina_channel_strip_reset(h: PatinaChannelStrip);
    pub fn patina_channel_strip_process(
        h: PatinaChannelStrip,
        input: *const *const c_float,
        output: *const *mut c_float,
        num_channels: c_int,
        num_samples: c_int,
        params: *const PatinaChannelStripParams,
    );
    pub fn patina_channel_strip_get_output_level(h: PatinaChannelStrip, channel: c_int) -> c_float;
    pub fn patina_channel_strip_is_gate_open(h: PatinaChannelStrip, channel: c_int) -> c_int;

    // --- EQ ---
    pub fn patina_eq_default_params() -> PatinaEqParams;
    pub fn patina_eq_create() -> PatinaEqEngine;
    pub fn patina_eq_destroy(h: PatinaEqEngine);
    pub fn patina_eq_prepare(h: PatinaEqEngine, spec: *const PatinaProcessSpec);
    pub fn patina_eq_reset(h: PatinaEqEngine);
    pub fn patina_eq_process(
        h: PatinaEqEngine,
        input: *const *const c_float,
        output: *const *mut c_float,
        num_channels: c_int,
        num_samples: c_int,
        params: *const PatinaEqParams,
    );

    // --- Limiter ---
    pub fn patina_limiter_default_params() -> PatinaLimiterParams;
    pub fn patina_limiter_create() -> PatinaLimiterEngine;
    pub fn patina_limiter_destroy(h: PatinaLimiterEngine);
    pub fn patina_limiter_prepare(h: PatinaLimiterEngine, spec: *const PatinaProcessSpec);
    pub fn patina_limiter_reset(h: PatinaLimiterEngine);
    pub fn patina_limiter_process(
        h: PatinaLimiterEngine,
        input: *const *const c_float,
        output: *const *mut c_float,
        num_channels: c_int,
        num_samples: c_int,
        params: *const PatinaLimiterParams,
    );
    pub fn patina_limiter_get_gain_reduction_db(h: PatinaLimiterEngine, channel: c_int) -> c_float;

    // --- Filter ---
    pub fn patina_filter_default_params() -> PatinaFilterParams;
    pub fn patina_filter_create() -> PatinaFilterEngine;
    pub fn patina_filter_destroy(h: PatinaFilterEngine);
    pub fn patina_filter_prepare(h: PatinaFilterEngine, spec: *const PatinaProcessSpec);
    pub fn patina_filter_reset(h: PatinaFilterEngine);
    pub fn patina_filter_process(
        h: PatinaFilterEngine,
        input: *const *const c_float,
        output: *const *mut c_float,
        num_channels: c_int,
        num_samples: c_int,
        params: *const PatinaFilterParams,
    );

    // --- Envelope Generator ---
    pub fn patina_envelope_generator_default_params() -> PatinaEnvelopeGeneratorParams;
    pub fn patina_envelope_generator_create() -> PatinaEnvelopeGeneratorEngine;
    pub fn patina_envelope_generator_destroy(h: PatinaEnvelopeGeneratorEngine);
    pub fn patina_envelope_generator_prepare(h: PatinaEnvelopeGeneratorEngine, spec: *const PatinaProcessSpec);
    pub fn patina_envelope_generator_reset(h: PatinaEnvelopeGeneratorEngine);
    pub fn patina_envelope_generator_process(
        h: PatinaEnvelopeGeneratorEngine,
        input: *const *const c_float,
        output: *const *mut c_float,
        num_channels: c_int,
        num_samples: c_int,
        params: *const PatinaEnvelopeGeneratorParams,
    );
    pub fn patina_envelope_generator_get_envelope(h: PatinaEnvelopeGeneratorEngine, channel: c_int) -> c_float;
    pub fn patina_envelope_generator_gate_on(h: PatinaEnvelopeGeneratorEngine);
    pub fn patina_envelope_generator_gate_off(h: PatinaEnvelopeGeneratorEngine);
}
